[tool.poetry]
name = "prism"
version = "0.1.0"
description = ""
authors = ["hlefsqro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.3"
tweepy = "^4.14.0"
langchain = "^0.3.10"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.10"
streamlit = "^1.41.1"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
