[tool.poetry]
name = "prism"
version = "0.1.0"
description = ""
authors = ["hlefsqro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.3"
tweepy = "^4.14.0"
langchain = "^0.3.10"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.10"
streamlit = "^1.41.1"
pydantic-settings = "^2.7.0"
click = "^8.1.7"
h11 = "^0.14.0"
uvicorn = "^0.33.0"
aiohttp = "^3.11.10"
fastapi = "^0.115.6"
langchain-text-splitters = "^0.3.2"
orjson = "^3.10.12"
pyecharts = "^2.0.7"
sse-starlette = "^2.1.3"
streamlit-mermaid = "^0.2.0"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-exporter-otlp = "^1.29.0"
opentelemetry-exporter-otlp-proto-http = "^1.29.0"
opentelemetry-exporter-otlp-proto-common = "^1.29.0"
opentelemetry-proto = "^1.29.0"
opentelemetry-distro = "^0.50b0"
opentelemetry-semantic-conventions = "^0.50b0"
opentelemetry-util-http = "^0.50b0"
opentelemetry-instrumentation = "^0.50b0"
opentelemetry-instrumentation-asgi = "^0.50b0"
deprecated = "^1.2.15"
google = "^3.0.0"
protobuf = "^5.29.1"
opentelemetry-instrumentation-logging = "^0.50b0"
opentelemetry-instrumentation-fastapi = "^0.50b0"
opentelemetry-instrumentation-aiohttp-client = "^0.50b0"
opentelemetry-instrumentation-requests = "^0.50b0"
opentelemetry-instrumentation-httpx = "^0.50b0"
langgraph = "^0.2.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
